--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@ text-align:center}
     padding: 0;
     overflow: hidden;
     background-color: black;
-	text-align:right
+	text-align:right;
+width:100%;
 
 	
 }
@@ -79,14 +80,15 @@ text-align:center}
 
 li a {
     display: block;
+    float:left;
     color: orange;
     text-align: center;
-    padding: 14px 16px;
+    padding:14px 16px;
     text-decoration: none;
-	background-color:#787A71;
+	background-color:black;
 }
 li a:hover {
-    background-color:black;
+    background-color:gray;
 	border-right: 1px solid #bbb;
 }
 
