--- a/style.css
+++ b/style.css
@@ -63,14 +63,31 @@ h2{color:white;
 text-align:center}
 
 
-.menubar{
+
+.menubar {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: black;
-	text-align:right;
-width:100%;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
+}
 
 	
 }
@@ -78,23 +95,7 @@ width:100%;
 
 
 
-li a {
-    display: block;
-    float:left;
-    color: orange;
-    text-align: center;
-    padding:14px 16px;
-    text-decoration: none;
-	background-color:black;
-}
-li a:hover {
-    background-color:gray;
-	border-right: 1px solid #bbb;
-}
 
-li:last-child {
-    border-right: none;
-}
 .per{display :block}
 
 .image {
